--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,8 @@ version: 8.0
 main: info.itsthesky.SuperGuilds.SuperGuilds
 description: The best rework of SuperGuilds, in plugin! SuperGuilds allow your server to have guild (=faction) system, with war and custom building!
 api-version: 1.13
+softdepend:
+  - WorldEdit
+  - Citizens
+  - WorldGuard
+  - HolographicDisplays
