Added new Locale system Added Verification for every locale files Added default config.yml file Added 2 new methods; contentFromURL() and setContentOfFile()

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,16 @@ version: 8.0
 main: info.itsthesky.SuperGuilds.SuperGuilds
 description: The best rework of SuperGuilds, in plugin! SuperGuilds allow your server to have guild (=faction) system, with war and custom building!
 api-version: 1.13
+authors:
+  - ItsTheSky
+  - RepublicanSensei
+  - Sashie
 softdepend:
   - WorldEdit
   - Citizens
   - WorldGuard
   - HolographicDisplays
+commands:
+  superguilds:
+    aliases: [g, sg, guild, faction, f]
+    description: Main SuperGuilds command.
